# idml

./: CITATION.cff  Cargo.toml  Coverage.sh  README.md  Taskfile.yml  tarpaulin-report.html
.github/workflows/: build-linux.yml  build-macos-arm64.yml  build-macos.yml  build-windows.yml
examples/compatibility/level_2/: 2_0001.dmm
src/: defs.rs  errors.rs  lib.rs  node.rs  parser.rs  tokenizer.rs
tests/: indexes.rs  invalid_input.rs  iterators.rs  mod.rs  parsing_invalid_input.rs  parsing_valid_input.rs  tokenizing_invalid_input.rs  tokenizing_valid_input.rs  valid_input.rs
tests/examples/: basic.idml  basic.rs  mod.rs
