[package]
name = "idml"
version = "0.5.2"
authors = ["Dariusz Depta <depta@engos.de>"]
description = "Parser for Indented Delimiter Markup Language"
documentation = "https://docs.rs/idml"
repository = "https://github.com/idml-lang/idml.git"
keywords = ["indented", "delimiter", "markup", "language", "parser"]
categories = ["encoding"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
normalized-line-endings = "0.0.8"
